2006-05-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* src-release (DEVO_SUPPORT): Add config.rpath.

2006-05-25  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.def (bfd, opcodes): Fix lib_path.
	* Makefile.tpl (POSTSTAGE1_FLAGS_TO_PASS): Replace ADAC with ADAFLAGS.
	(restrap): Move under "@if gcc-bootstrap".  Fix typo.
	* Makefile.in: Regenerate.

2006-05-24  Mark Shinwell  <shinwell@codesourcery.com>

	* configure.in: Enable gprof for cross builds.
	* configure: Regenerate.

2006-05-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* src-release (MAKEINFOFLAGS): Define.
	(do-proto-toplev): Pass MAKEINFOFLAGS to submakes.

2006-05-14  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2006-05-12  Ben Elliston  <bje@au.ibm.com>

	* config.sub, config.guess: Update from upstream sources.

2006-05-04  Steve Ellcey  <sje@cup.hp.com>

	* blt, iwidgets, mmalloc: Remove directories.

2006-05-01  DJ Delorie  <dj@redhat.com>

	* configure.in: Restore CFLAGS if GMP isn't present.
	* configure: Regenerate.

2006-04-18  DJ Delorie  <dj@redhat.com>

	* configure.in (m32c): Build libstdc++-v3.  Pass flags to
	reference libgloss so that libssp can be built in a combined
	tree.
	* configure: Regenerate.

2006-04-10  Ben Elliston  <bje@au.ibm.com>

	* contrib: Remove directory.

2006-04-06  Carlos O'Donell <carlos@codesourcery.com>

	* Makefile.tpl: Add install-html target.
	* Makefile.def: Add install-html target.
	* Makefile.in: Regenerate.
	* configure.in: Add --with-datarootdir, --with-docdir,
	and --with-htmldir options.
	* configure: Regenerate.

2006-03-31  Ben Elliston  <bje@au.ibm.com>

	PR binutils/1860
	* configure.in: Require makeinfo 4.4 or higher.
	* configure: Regenerate.

2006-03-14  Paolo Bonzini  <bonzini@gnu.org>

	* Makefile.in: Regenerate.

2006-03-14  Paolo Bonzini  <bonzini@gnu.org>

	Sync with gcc:
	2006-03-10  Aldy Hernandez  <aldyh@redhat.com>

        * configure.in: Handle --disable-<component> generically.